Using a lower z-index to fix the issue at hand.

--- a/src/Umbraco.Web.UI.Client/src/less/panel.less
+++ b/src/Umbraco.Web.UI.Client/src/less/panel.less
@@ -153,7 +153,7 @@
     border-radius: @tabsBorderRadius;
     box-shadow: none;
     padding: 0;
-    z-index: 9999;
+    z-index: 6020;
 }
 
 .umb-btn-toolbar .dropdown-menu small {
